--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Hugo Foulon",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "swagger": "^0.7.5",
