--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "Hugo Foulon",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
     "nodemon": "^2.0.20",
-    "swagger": "^0.7.5",
+    "swagger": "^0.0.1",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
   }
